--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "haversine": "^1.1.1",
     "native-base": "^2.15.2",
     "pubnub-react": "^1.3.2",
     "react": "16.13.1",
