--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "@mauron85/react-native-background-geolocation": "^0.6.3",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.6",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
     "expo-location": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "firebase": "7.9.0",
     "haversine": "^1.1.1",
     "native-base": "^2.15.2",
     "pubnub-react": "^1.3.2",
@@ -28,7 +30,7 @@
     "react-native-maps": "^0.27.1",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-unimodules": "~0.12.0",
     "react-native-vector-icons": "^8.0.0",
