--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-location": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
@@ -26,6 +27,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-flash-message": "^0.1.21",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-maps": "^0.27.1",
     "react-native-paper": "^4.7.1",
